# openClawGoldTraderBot

./: .env.example  .gitignore  Dockerfile  README.md  STRATEGY.md  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  switch-account.sh  vps-status.sh
app/: config.py  dependencies.py  instruments.py  main.py
app/api/: analytics.py  backtest.py  health.py  journal.py  positions.py  router.py  technicals.py  telegram_webhook.py  trades.py
app/models/: analysis_journal.py  database.py  (+2 more)
cron/: common.sh  daily_summary.sh  eod_close.sh  monitor.sh  scan_bb_bounce.sh  scan_daily.sh  scan_intraday.sh  scan_ny_orb.sh  scan_scalp.sh  scan_sensei.sh  scan_swing.sh  setup_cron.sh
journal/: latest_summary.json
openclaw-skills/: SOUL.md
scripts/: backtest_accurate_nzd.py  backtest_all_live.py  backtest_always_trading.py  backtest_btc_m5_risk_sizing.py  backtest_compare.py  backtest_compare_fixed.py  backtest_compare_v2.py  backtest_current_setup.py  backtest_dual_pair.py  backtest_eod_vs_hold.py  backtest_forex_scan.py  backtest_intraday_sltp.py  backtest_live_ratchet.py  backtest_live_setup_full.py  backtest_m5_btc_vs_nzd.py  backtest_multi_pair.py  backtest_ny_orb.py  backtest_nzdusd_50eur.py  backtest_optimize_fx.py  backtest_pro_strategies.py  backtest_ratchet_compare.py  backtest_ratchet_progression.py  backtest_sensei.py  backtest_sensei_impl.py  backtest_sensei_v2.py  backtest_sensei_v3.py  backtest_sensei_v4.py  backtest_strategy_compare.py  com.gold-trader.keepawake.plist  keep_awake.sh  migrate_v4.py  migrate_v4_journal.py
tests/: conftest.py
(+1670 files in other folders)
