[project]
name = "gold-trader"
version = "2.0.0"
description = "Automated XAUUSD trading bot with Interactive Brokers API"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "ib_async",
    "sqlalchemy",
    "aiosqlite",
    "greenlet",
    "httpx",
    "python-telegram-bot",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
